removed dynamic fixed scrolling on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20,14 +20,21 @@
     /* transitions */
     --easeTransition: all 0.5s ease;
 
-    /* font sizes */
+    /* linked to mobile stuff */
     --specifiedFontSize: 12pt;
+    --dynamicallyFixedBackgroundAttatchment: fixed;
 }
 
-/* for mobile devices */
+/* for mobile devices or smaller screens */
 @media screen and (max-width: 479px) {
     :root {
         --specifiedFontSize: 10pt;
+    }
+}
+/* only mobile */
+@media (hover: none) {
+    :root {
+        --dynamicallyFixedBackgroundAttatchment: scroll;
     }
 }
 
